# optimization-lab

./: .gitignore  README.md
thread pool openmp vs native/: meson.build
thread pool openmp vs native/include/: MonteCarloPi.h
thread pool openmp vs native/src/: MonteCarloPi.cpp  perf_comparison.cpp  sanity_check.cpp
